<resources>
    <string name="app_name">appMediaEscolar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">VAMOS</string>
    <string name="calcular">CALCULAR</string>

    <string name="hello_first_fragment">BEM VINDO, VAMOS CALCULAR SUAS NOTAS ? </string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="media_escolar">MÉDIA ESCOLAR</string>
    <string name="bimestre">1º BIMESTRE</string>
    <string name="materia">MATÉRIA:</string>
    <string name="nota_do_trabalho">NOTA DO TRABALHO:</string>
    <string name="nota_da_prova">NOTA DA PROVA:</string>
    <string name="media">MÉDIA</string>
    <string name="situacao">SITUAÇÃO</string>
</resources>